# Relativity-Studio

./: MANIFEST.in  README.md  pyproject.toml  relativity_studio.py  setup.cfg
relativity_studio/: __init__.py  app.py
src/: __init__.py  __main__.py  relativity_studio.py
src/tabs/: tab_advanced_effects.py  tab_animations.py  tab_bh_collision.py  tab_curvature.py  tab_doppler.py  tab_energy_momentum.py  tab_expansion.py  tab_freefall.py  tab_geodesics.py  tab_horizon.py  tab_intro.py  tab_kerr.py  tab_light_deflection.py  tab_multi_lens.py  tab_orbits.py  tab_time_dilation.py  tab_twins.py  tab_wormhole.py
tests/: test_relativity_studio.py
