[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relativity-studio"
version = "0.1.0"
description = "Simulador didáctico e interactivo de relatividad general con PyQt5"
authors = [
  { name="Tu Nombre", email="tu.email@ejemplo.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5",
    "numpy",
    "matplotlib",
    "scipy"
]

[project.scripts]
relativity-studio = "src.relativity_studio:main"
