[metadata]
name = relativity-studio
version = 0.1.0
description = Simulador didáctico e interactivo de relatividad general con PyQt5
author = Tu Nombre
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyQt5
    numpy
    matplotlib
    scipy

[options.entry_points]
console_scripts =
    relativity-studio = src.relativity_studio:main
